repeat search on xapian update

Repeat the current package search whenever the xapian index is updated.

BUG: 362047